--- a/upload-file-google-storage-final/functions/package.json
+++ b/upload-file-google-storage-final/functions/package.json
@@ -20,8 +20,9 @@
     "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
-    "tslint": "~5.8.0",
-    "typescript": "~2.8.3"
+    "tslint": "~5.12.0",
+    "typescript": "~3.2.2",
+    "firebase-tools": "^6.2.2"
   },
   "private": true
 }
